--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "http://coolcoolcoolcoolcoolcool.cool"
 languageCode = "en-us"
 title = "coolcoolcoolcoolcoolcool.cool"
-theme = "blank"
+theme = "cool"
