--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://coolcoolcoolcoolcoolcool.cool"
+baseURL = "https://coolcoolcoolcoolcoolcool.cool"
 languageCode = "en-us"
 title = "coolcoolcoolcoolcoolcool.cool"
 theme = "cool"
